# tmp-folder

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: docs.yml  style_check.yml  tox.yml  unit_tests.yml
docs/: index.md
search/: search_index.json
tests/: test_tmp_folder.py  tmp_folder_test.py
tmp_folder/: __init__.py  main.py
