[tool.poetry]
name = "tmp-folder"
version = "0.1.0"
description = ""
authors = ["Jorge Alvarado <alvaradosegurajorge@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
