[tool.poetry]
name = "tmp-folder"
version = "0.1.0"
description = ""
authors = ["Jorge Alvarado <alvaradosegurajorge@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
tox = "^3.24.5"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
