[tool.poetry]
name = "tmp-folder"
version = "0.1.0"
description = "Extends python `TemporaryDirectory` and make it even easier to use, as a decorator."
authors = ["Jorge Alvarado <alvaradosegurajorge@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://jalvaradosegura.github.io/tmp-folder/"
repository = "https://github.com/jalvaradosegura/tmp-folder"

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
tox = "^3.24.5"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^21.12b0"
tox-py = "^1.2.0"
mkdocs-material = "^8.1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
